[tool.poetry]
name = "local-rag-demo"
version = "0.1.0"
description = ""
authors = ["VVS <vvslaxman14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
langchain = "^0.2.5"
streamlit-chat = "^0.1.1"
pypdf = "^4.2.0"
pyPDF2 = "^3.0.1"
fastembed = "^0.3.1"
openai = "^1.35.3"
langchainhub = "^0.1.20"
chromadb = "^0.5.3"
streamlit = "^1.35.0"
watchdog = "^4.0.1"
huggingface-hub  = "^0.23.4"
faiss-cpu ="^1.8.0"                              
langchain-community="^0.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
